<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/edit_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_numbers"
        android:paddingHorizontal="10dp"
       android:layout_marginTop="40dp"
        android:maxLength="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.20" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_operator"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_numbers"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:layout_editor_absoluteX="10dp">

        <RadioButton
            android:id="@+id/radio_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/plus"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/radio_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/sub"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/radio_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/div"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/radio_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/multi"
            android:textSize="28sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        tools:layout_editor_absoluteX="10dp"
        android:entries="@array/spinner_time"
        android:spinnerMode="dropdown"
        android:paddingVertical="5dp"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_time"
        app:layout_constraintEnd_toEndOf="@+id/spinner_time"
        app:layout_constraintTop_toTopOf="@+id/spinner_time"
        android:layout_marginEnd="10dp"
        app:tint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_execute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:text="@string/execute"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"

        app:layout_constraintTop_toBottomOf="@+id/spinner_time"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>